# terminal3-adk-bounty

./: .gitignore  BUIDL-SUBMISSION.md  LICENSE  README.md
apps/agent-cli/: package-lock.json  package.json  tsconfig.json
apps/agent-cli/src/: grant.ts  index.ts  t3n.ts
contracts/intake-vault/: Cargo.toml  README.md
contracts/intake-vault/src/: intake.rs  lib.rs
contracts/intake-vault/wit/: world.wit
reports/: sdk-findings-live-run.md
scripts/: demo.ps1
