[package]
name = "intake-vault"
version = "0.1.0"
edition = "2021"
description = "Confidential Intake Vault — a Trinity z-tenant TEE contract that ingests a sensitive submission, scores completeness and writes a redacted public summary entirely inside the enclave. Raw PII never crosses the WIT boundary."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
